# python-project-lvl4

./: .env.example  .gitignore  .travis.yml  Dockerfile  Makefile  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: pyproject-checkpoint.toml  requirements-checkpoint.txt
static/: style.css
task_manager/: .env  settings.py  untitled  urls.py  views.py
task_manager/.ipynb_checkpoints/: settings-checkpoint.py
task_manager/templates/: main.html
tasks/: admin.py  models.py  test.py  testmodel.py  testmodels.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_auto_20201005_1653.py  0003_delete_status_image.py
tests/: test_models.py  testmodel.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/.ipynb_checkpoints/: forms-checkpoint.py
users/migrations/: 0001_initial.py  0002_auto_20201002_1135.py  0003_auto_20201002_2311.py  0004_auto_20201003_1615.py
users/templates/: register_done.html  signin.html  signup.html
