[tool.poetry]
name = "GreyWolf_Task_Manager"
version = "0.0.1"
description = "Task_Manager"
authors = ["GreyGreyWolf"]
packages = [
  {include = "task_manager"},
  ]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
coverage = "^5.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
